Stash middleware tests

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pflr-express-kit",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "main": "lib/server.js",
   "repository": {},
   "license": "MIT",
@@ -34,7 +34,11 @@
     "marked": "^0.3.6",
     "messageformat": "^1.0.2",
     "mkdirp": "^0.5.1",
+    "mock-express": "^1.2.0",
+    "mock-express-request": "^0.2.0",
+    "mock-express-response": "^0.2.1",
     "morgan": "^1.8.1",
+    "multi-tape": "^1.1.1",
     "npm-run-all": "^4.0.2",
     "nunjucks": "^3.0.0",
     "postcss": "^5.2.17",
@@ -44,13 +48,18 @@
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-discard-empty": "^2.1.0",
     "postcss-import": "^9.1.0",
+    "proxyquire": "^1.8.0",
     "raven": "^2.0.2",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.3",
     "serve-favicon": "^2.4.2",
     "shortid": "^2.2.8",
+    "sinon": "^2.3.8",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
+    "tap-diff": "^0.1.1",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.7.0",
     "webdriverio": "^4.8.0"
   },
   "bin": {
