Add a11y test run stubs

--- a/package.json
+++ b/package.json
@@ -59,16 +59,19 @@
     "stylelint-config-standard": "^16.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0",
+    "the-a11y-machine": "^0.9.3",
     "webdriverio": "^4.8.0"
   },
   "bin": {
     "clean-docker": "bin/clean-docker.sh",
     "lint-data": "bin/lint-data.js",
-  "lint-javascript": "bin/lint-javascript.js",
+    "lint-javascript": "bin/lint-javascript.js",
     "lint-javascript-client": "bin/lint-javascript-client.js",
     "lint-javascript-server": "bin/lint-javascript-server.js",
     "lint-stylesheets": "bin/lint-stylesheets.js",
     "lint-templates": "bin/lint-templates.js",
+    "test-a11y": "bin/test-a11y.sh",
+    "test-a11y-ci": "bin/test-a11y-ci.sh",
     "test-functional": "bin/test-functional.sh",
     "test-functional-ci": "bin/test-functional-ci.sh",
     "test-unit": "bin/test-unit.sh",
