--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "multi-tape": "^1.1.1",
     "npm-run-all": "^4.0.2",
     "nunjucks": "^3.0.0",
+    "pa11y-ci": "^1.2.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "postcss": "^5.2.17",
     "postcss-cli": "^3.2.0",
     "postcss-cssnext": "^2.10.0",
@@ -55,6 +57,7 @@
     "serve-favicon": "^2.4.2",
     "shortid": "^2.2.8",
     "sinon": "^2.3.8",
+    "sitemap-generator": "^6.0.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "tap-spec": "^4.1.1",
