Replace package scripts with bin ones

--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "webdriverio": "^4.8.0"
   },
   "bin": {
+    "build-css": "bin/build-css.sh",
+    "clean-build": "bin/clean-build.sh",
     "clean-docker": "bin/clean-docker.sh",
     "lint-data": "bin/lint-data.js",
     "lint-javascript": "bin/lint-javascript.js",
@@ -79,9 +81,12 @@
     "test-functional": "bin/test-functional.sh",
     "test-functional-ci": "bin/test-functional-ci.sh",
     "test-unit": "bin/test-unit.sh",
-    "test-unit-ci": "bin/test-unit-ci.sh"
+    "test-unit-ci": "bin/test-unit-ci.sh",
+    "watch-css": "bin/watch-css.sh"
   },
   "scripts": {
+    "build:css": "bin/build-css.sh",
+    "clean:build": "bin/clean-build.sh",
     "githooks": "git config core.hooksPath .githooks",
     "githooksUnset": "git config --unset core.hooksPath",
     "lint": "npm-run-all lint:data lint:stylesheets lint:templates lint:javascript:client lint:javascript:server",
@@ -91,11 +96,9 @@
     "lint:stylesheets": "node bin/lint-stylesheets.js",
     "lint:templates": "node bin/lint-templates.js",
     "preinstall": "if [ -d .git ] && [ -x \"$(command -v git)\" ]; then npm run githooks; else echo 'git not installed'; fi;",
-    "postcssmv": "postcss -c postcss.config.js ../overhaul/app/css/*.pcss --dir ../overhaul/public/stylesheets && find ../overhaul/public/stylesheets -name *.pcss | sed -e 'p;s/\\.pcss$/.css/' | xargs -n2 mv",
-    "postcss": "postcss -c postcss.config.js $APPDIR/app/css/*.css --dir $APPDIR/public/stylesheets",
     "test:unit": "bin/test-unit.sh",
     "test:docker": "echo no docker test set up",
     "test:docker:cleanup": "echo no docker test cleanup set up",
-    "watchpostcss": "yarn postcss -- --watch"
+    "watch:css": "bin/watch-css.sh"
   }
 }
