--- a/package.json
+++ b/package.json
@@ -66,9 +66,13 @@
     "webdriverio": "^4.8.0"
   },
   "bin": {
+    "build": "bin/build.sh",
     "build-css": "bin/build-css.sh",
     "clean-build": "bin/clean-build.sh",
     "clean-docker": "bin/clean-docker.sh",
+    "clean-prepush": "bin/clean-prepush.sh",
+    "dev-start": "bin/dev-start.sh",
+    "lint": "bin/lint.sh",
     "lint-data": "bin/lint-data.js",
     "lint-javascript": "bin/lint-javascript.js",
     "lint-javascript-client": "bin/lint-javascript-client.js",
@@ -77,9 +81,11 @@
     "lint-templates": "bin/lint-templates.js",
     "test-a11y": "bin/test-a11y.sh",
     "test-a11y-ci": "bin/test-a11y-ci.sh",
+    "test-all": "bin/test-all.sh",
     "test-ci": "bin/test-ci.sh",
     "test-functional": "bin/test-functional.sh",
     "test-functional-ci": "bin/test-functional-ci.sh",
+    "test-prepush": "bin/test-prepush.sh",
     "test-unit": "bin/test-unit.sh",
     "test-unit-ci": "bin/test-unit-ci.sh",
     "watch-css": "bin/watch-css.sh"
@@ -90,11 +96,11 @@
     "githooks": "git config core.hooksPath .githooks",
     "githooksUnset": "git config --unset core.hooksPath",
     "lint": "npm-run-all lint:data lint:stylesheets lint:templates lint:javascript:client lint:javascript:server",
-    "lint:data": "node bin/lint-data.js",
-    "lint:javascript:client": "node bin/lint-javascript-client.js",
-    "lint:javascript:server": "node bin/lint-javascript-server.js",
-    "lint:stylesheets": "node bin/lint-stylesheets.js",
-    "lint:templates": "node bin/lint-templates.js",
+    "lint:data": "bin/lint-data.js",
+    "lint:javascript:client": "bin/lint-javascript-client.js",
+    "lint:javascript:server": "bin/lint-javascript-server.js",
+    "lint:stylesheets": "bin/lint-stylesheets.js",
+    "lint:templates": "bin/lint-templates.js",
     "preinstall": "if [ -d .git ] && [ -x \"$(command -v git)\" ]; then npm run githooks; else echo 'git not installed'; fi;",
     "test:unit": "bin/test-unit.sh",
     "test:docker": "echo no docker test set up",
