--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "markdown": "^0.5.0",
     "markdown-it": "^8.3.1",
     "markdown-it-deflist": "^2.0.2",
+    "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "marked": "^0.3.6",
     "messageformat": "^1.0.2",
