--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.4",
     "markdown": "^0.5.0",
     "markdown-it": "^8.3.1",
+    "markdown-it-abbr": "^1.0.4",
     "markdown-it-deflist": "^2.0.2",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
