--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pflr-express-kit",
-  "version": "0.0.28",
+  "version": "0.0.28a",
   "main": "lib/server.js",
   "repository": {},
   "license": "MIT",
