--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "npm-run-all": "^4.0.2",
     "nunjucks": "^3.0.0",
     "pa11y-ci": "^1.2.0",
+    "path-to-regexp": "^2.1.0",
     "phantomjs-prebuilt": "^2.1.14",
     "postcss": "^5.2.17",
     "postcss-cli": "^3.2.0",
