--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "pflr-express-kit",
-  "version": "0.0.23",
+  "version": "0.0.24-fix",
   "main": "lib/server.js",
   "repository": {},
   "license": "MIT",
   "dependencies": {
-    "ava": "^0.19.1",
-    "babel-cli": "^6.24.1",
+    "ava": "^1.3.1",
+    "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.1",
-    "codeceptjs": "^0.6.3-pre",
+    "codeceptjs": "^2.0.7",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "eslint": "^3.19.0",
@@ -46,7 +46,7 @@
     "pa11y-ci": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "postcss": "^5.2.17",
-    "postcss-cli": "^3.2.0",
+    "postcss-cli": "^6.1.2",
     "postcss-cssnext": "^2.10.0",
     "postcss-discard-comments": "^2.0.4",
     "postcss-discard-duplicates": "^2.1.0",
@@ -58,11 +58,11 @@
     "request-promise-native": "^1.0.3",
     "serve-favicon": "^2.4.2",
     "shortid": "^2.2.8",
-    "sinon": "^2.3.8",
+    "sinon": "^7.2.7",
     "sitemap-generator": "^6.0.0",
-    "stylelint": "^7.10.1",
+    "stylelint": "^9.10.1",
     "stylelint-config-standard": "^16.0.0",
-    "tap-spec": "^4.1.1",
+    "tap-spec": "^5.0.0",
     "tape": "^4.7.0",
     "the-a11y-machine": "^0.9.3",
     "webdriverio": "^4.8.0"
